[gd_scene load_steps=2 format=3 uid="uid://d2d5yxuff7jw5"]

[ext_resource type="Script" path="res://UI Perguntas/perguntas.gd" id="1_aq3wi"]

[node name="Perguntas" type="CanvasLayer"]
script = ExtResource("1_aq3wi")

[node name="Content" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="QuestionInfo" type="VBoxContainer" parent="Content"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -111.5
offset_right = 111.5
offset_bottom = 70.0
grow_horizontal = 2

[node name="QuestionText" type="Label" parent="Content/QuestionInfo"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_font_sizes/font_size = 50
text = "Pergunta
"
horizontal_alignment = 1

[node name="QuestionHolder" type="VBoxContainer" parent="Content"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -324.0
offset_top = -528.0
offset_right = 324.0
offset_bottom = -108.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20

[node name="ButtonOption1" type="Button" parent="Content/QuestionHolder"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonOption2" type="Button" parent="Content/QuestionHolder"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonOption3" type="Button" parent="Content/QuestionHolder"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonOption4" type="Button" parent="Content/QuestionHolder"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="Content/QuestionHolder/ButtonOption1" to="." method="_on_button_option_1_pressed"]
[connection signal="pressed" from="Content/QuestionHolder/ButtonOption2" to="." method="_on_button_option_2_pressed"]
[connection signal="pressed" from="Content/QuestionHolder/ButtonOption3" to="." method="_on_button_option_3_pressed"]
[connection signal="pressed" from="Content/QuestionHolder/ButtonOption4" to="." method="_on_button_option_4_pressed"]
